--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,43 @@
-.gradle
-build/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+FideltasKotlin/.gradle
+FideltasKotlin/build/
+FideltasKotlin/!gradle/wrapper/gradle-wrapper.jar
+FideltasKotlin/!**/src/main/**/build/
+FideltasKotlin/!**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-.idea
+FideltasKotlin/.idea/modules.xml
+FideltasKotlin/.idea/jarRepositories.xml
+FideltasKotlin/.idea/compiler.xml
+FideltasKotlin/.idea/libraries/
+FideltasKotlin/*.iws
+FideltasKotlin/*.iml
+FideltasKotlin/*.ipr
+FideltasKotlin/out/
+FideltasKotlin/!**/src/main/**/out/
+FideltasKotlin/!**/src/test/**/out/
+FideltasKotlin/.idea
 
 ### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+FideltasKotlin/.apt_generated
+FideltasKotlin/.classpath
+FideltasKotlin/.factorypath
+FideltasKotlin/.project
+FideltasKotlin/.settings
+FideltasKotlin/.springBeans
+FideltasKotlin/.sts4-cache
+FideltasKotlin/bin/
+FideltasKotlin/!**/src/main/**/bin/
+FideltasKotlin/!**/src/test/**/bin/
 
 ### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+FideltasKotlin/nbproject/private/
+FideltasKotlin/nbbuild/
+FideltasKotlin/dist/
+FideltasKotlin/nbdist/
+FideltasKotlin/.nb-gradle/
 
 ### VS Code ###
-.vscode/
+FideltasKotlin/.vscode/
 
 ### Mac OS ###
-.DS_Store.idea/
+FideltasKotlin/.DS_Store.idea/
