--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,44 @@
-FideltasKotlin/.gradle
-FideltasKotlin/build/
-FideltasKotlin/!gradle/wrapper/gradle-wrapper.jar
-FideltasKotlin/!**/src/main/**/build/
-FideltasKotlin/!**/src/test/**/build/
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-FideltasKotlin/.idea/modules.xml
-FideltasKotlin/.idea/jarRepositories.xml
-FideltasKotlin/.idea/compiler.xml
-FideltasKotlin/.idea/libraries/
-FideltasKotlin/*.iws
-FideltasKotlin/*.iml
-FideltasKotlin/*.ipr
-FideltasKotlin/out/
-FideltasKotlin/!**/src/main/**/out/
-FideltasKotlin/!**/src/test/**/out/
-FideltasKotlin/.idea
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+.idea
 
 ### Eclipse ###
-FideltasKotlin/.apt_generated
-FideltasKotlin/.classpath
-FideltasKotlin/.factorypath
-FideltasKotlin/.project
-FideltasKotlin/.settings
-FideltasKotlin/.springBeans
-FideltasKotlin/.sts4-cache
-FideltasKotlin/bin/
-FideltasKotlin/!**/src/main/**/bin/
-FideltasKotlin/!**/src/test/**/bin/
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### NetBeans ###
-FideltasKotlin/nbproject/private/
-FideltasKotlin/nbbuild/
-FideltasKotlin/dist/
-FideltasKotlin/nbdist/
-FideltasKotlin/.nb-gradle/
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
 
 ### VS Code ###
-FideltasKotlin/.vscode/
+.vscode/
 
 ### Mac OS ###
-FideltasKotlin/.DS_Store.idea/
+.DS_Store.idea/
+
